Changed project name

--- a/PCPartsStore/Tests/Tests.csproj
+++ b/PCPartsStore/Tests/Tests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PartOrderingApp\PartOrderingApp.csproj" />
+    <ProjectReference Include="..\PartOrderingApp\PCPartsStore.csproj" />
   </ItemGroup>
 
 </Project>
